# package/src/ingest-api-types.ts
@@ -9,7 +9,7 @@
  * ---------------------------------------------------------------
  */
 
-export interface MutationV1PageTrackPayload {
+export interface MutationPageViewPayload {
   site: string;
   user_id: string;
   session_id: string;
@@ -23,13 +23,30 @@ export interface MutationV1PageTrackPayload {
   utm_term?: string;
   utm_content?: string;
   querystring?: string;
+  referrer?: string;
+}
+
+export interface MutationEventTrackPayload {
+  site: string;
+  user_id: string;
+  session_id: string;
+  event: string;
+  tracked_at: string;
+  data?: number;
+  utm_source?: string;
+  utm_medium?: string;
+  utm_campaign?: string;
+  utm_term?: string;
+  utm_content?: string;
+  querystring?: string;
+  referrer?: string;
 }
 
 export namespace V1 {
   /**
  * No description
- * @name MutationV1PageTrack
- * @request POST:/v1/page/track
+ * @name MutationPageView
+ * @request POST:/v1/page/view
  * @response `200` `any` Successful response
  * @response `default` `{
     message: string,
@@ -41,10 +58,31 @@ export namespace V1 {
 
 }`
 */
-  export namespace MutationV1PageTrack {
+  export namespace MutationPageView {
     export type RequestParams = {};
     export type RequestQuery = {};
-    export type RequestBody = MutationV1PageTrackPayload;
+    export type RequestBody = MutationPageViewPayload;
+    export type RequestHeaders = {};
+    export type ResponseBody = any;
+  } /**
+ * No description
+ * @name MutationEventTrack
+ * @request POST:/v1/event/track
+ * @response `200` `any` Successful response
+ * @response `default` `{
+    message: string,
+    code: string,
+    issues?: ({
+    message: string,
+
+})[],
+
+}`
+*/
+  export namespace MutationEventTrack {
+    export type RequestParams = {};
+    export type RequestQuery = {};
+    export type RequestBody = MutationEventTrackPayload;
     export type RequestHeaders = {};
     export type ResponseBody = any;
   }
